Rewrite Review proposals

--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -196,22 +196,7 @@ Add reviewers by clicking **Manage reviewers** on the proposal's overview tab:
   alt="Schema proposals overview tab in Studio"
 />
 
-Once a proposal receives the [minimum number of approvals](./configure-proposals#required-approvals), its status changes to **Approved**. 
-
-<Note>
-
-Changes made to an approved proposal don't change the **Approved** status of the proposal.
-If you want to reset the proposal's status to **Open for feedback** or another status, you can [do so manually](#change-proposal-status) from the overview page.
-
-</Note>
-
-<img
-  src="../img/schema-proposals/approved-proposal.jpg"
-  className="screenshot"
-  alt="Schema proposals overview tab in Studio"
-/>
-
-Once a proposal is approved, your team can then begin [implementing the approved changes](./implement-proposals).
+<ApprovedSchemaProposals />
 
 
 
