Update page descriptions

--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -1,7 +1,7 @@
 ---
 title: Schema proposal configurations
 subtitle: Configure default reviewers, approval requirements, and more
-description: Fine-tune schema proposal workflows by configuring permissions, default reviewers, and approval requirements, and proposals in schema checks.
+description: Fine-tune GraphQL schema proposal workflows by configuring permissions, default reviewers, approval requirements, and schema checks with GraphOS.
 ---
 
 <GraphOSEnterpriseRequired />
