--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -1,7 +1,7 @@
 ---
 title: Propose schema changes
-subtitle: Edit schemas, lint and check changes, and request reviews
-description: Learn to propose schema changes in GraphOS Studio. Edit schemas, lint, save revisions, and request reviews for distributed collaboration.
+subtitle: Edit schemas, lint and check changes, and request reviews in GraphOS
+description: Propose GraphQL schema changes in GraphOS Studio. Edit and lint schemas, save and check revisions, and request reviews for async collaboration.
 ---
 
 <GraphOSEnterpriseRequired />
@@ -176,7 +176,9 @@ You can manually change the proposal's status from the overview page by clicking
 
 - **Draft**: default status upon creation
 - **Open for feedback**: signals the proposal is ready for review
-- **Closed**: signals the proposal is abandoned or suspended&mdash;you can always reopen a proposal by resetting the status
+- **Closed**: signals the proposal is abandoned or suspended
+  - Closed proposals cannot receive further revisions
+  - You can always reopen a proposal by resetting the status to Draft or Open for feedback
 
 <img
   src="../img/schema-proposals/edit-status.jpg"
