--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -1,5 +1,7 @@
 ---
-title: Review schema change proposals
+title: Review schema proposals
+subtitle: Review and provide feedback on proposed schema changes in GraphOS
+description: Review and provide feedback on GraphQL schema proposals in GraphOS Studio. Explore changes, add comments, and approve proposals.
 ---
 
 <GraphOSEnterpriseRequired />
