Add placeholder images

--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -84,20 +84,12 @@ The blue tab that appears next to a line shows the number of comments that line 
 
 ### Schema Reference
 
-The **Schema Reference** tab shows the entire supergraph schema reference with the proposal's changes applied:
-
-<img
-  src="../img/schema-proposals/schema-references.jpg"
-  className="screenshot"
-  alt="Schema proposals changes tab in Studio"
-/>
-
-Select **Proposal changes only** to view only the changes.
+The **Schema Reference** tab shows the entire supergraph schema reference with the proposal's changes applied. Select **Proposal changes only** to view only the changes.
 
 <img
   src="../img/schema-proposals/schema-references-filtered.jpg"
   className="screenshot"
-  alt="Schema proposals changes tab in Studio"
+  alt="Schema proposals schema reference tab in Studio"
 />
 
 You can use the other filters to the left of **Proposal changes only** to hone in on certain subgraphs, tags, directives, and more.
@@ -107,7 +99,7 @@ The left nav shows you the number of types the proposal changes. Clicking into a
 <img
   src="../img/schema-proposals/schema-reference-detailed.jpg"
   className="screenshot"
-  alt="Schema proposals changes tab in Studio"
+  alt="Schema proposals schema reference tab in Studio"
 />
 
 ## Add a review
