--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -198,6 +198,8 @@ Add reviewers by clicking **Manage reviewers** on the proposal's overview tab:
   alt="Schema proposals overview tab in Studio"
 />
 
+### Approved reviews
+
 <ApprovedSchemaProposals />
 
 
