--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -130,4 +130,6 @@ You can edit your review by clicking the pencil icon next to your name in the li
   width="200"
 />
 
+### Approved reviews
+
 <ApprovedSchemaProposals />
