--- a/src/content/shared/approved-schema-proposals.mdx
+++ b/src/content/shared/approved-schema-proposals.mdx
@@ -2,7 +2,7 @@ Once a proposal receives the [minimum number of approvals](/graphos/delivery/con
 
 <Note>
 
-Changes made to an approved proposal don't change the **Approved** status of the proposal.
+Revisions made to an approved proposal don't change the **Approved** status of the proposal.
 To set the proposal's status to **Open for feedback** or another status, [manually change it](/graphos/delivery/propose-changes#change-proposal-status) from the proposal's overview page.
 
 </Note>
